feat: add basic auth

--- a/src/Api/appsettings.Development.json
+++ b/src/Api/appsettings.Development.json
@@ -4,5 +4,10 @@
       "Default": "Information",
       "Microsoft.AspNetCore": "Warning"
     }
+  },
+  "JWT": {
+    "ValidIssuer": "https://localhost:7098",
+    "ValidAudience": "https://localhost:7098",
+    "Secret": "Lwxy0kKUxYjHzX7Wl6jvq8LrMhGGZP2ls6oF5uDmpk="
   }
 }
