--- a/src/Api/appsettings.json
+++ b/src/Api/appsettings.json
@@ -5,5 +5,10 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "JWT": {
+    "ValidIssuer": "https://localhost:7098",
+    "ValidAudience": "https://localhost:7098",
+    "Secret": "Lwxy0kKUxYjHzX7Wl6jvq8LrMhGGZP2ls6oF5uDmpk="
+  }
 }
