fix: untrack db files

--- a/.gitignore
+++ b/.gitignore
@@ -43,6 +43,10 @@ bld/
 # Visual Studio 2017 auto generated files
 Generated\ Files/
 
+*.db
+*.db-shm
+*.db-wal
+
 # MSTest test Results
 [Tt]est[Rr]esult*/
 [Bb]uild[Ll]og.*
